--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,3 +1,25 @@
+<% if (messages.error) { %>
+    <%= messages.error %>
+<% } %>
+
+
+<h1>Login</h1>
+
+
+<form action ="/login" method = "POST">
+    
+    <div>
+        <label for = "email" >Email</label>
+        <input type = "email" id = "email" name ="email" required>
+    </div>
+    <div>
+        <label for = "pasword" >Password</label>
+        <input type = "password" id = "password" name ="password" required>
+    </div>
+    <button type = "submit">Login</button>
+</form>
+<a href ="/register">Register</a>
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,7 +28,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Weather app</title>
-    <link rel="stylesheet" href="styles.css" />
+    
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,700;1,600&display=swap" rel="stylesheet">
@@ -41,9 +63,9 @@
 
     </div>
     
-    <script src="HotAlarm.js"></script>
-    <script src="ColdAlarm.js"></script>
-    <script src="GetWeatherInfo.js"></script>
+    <script src='/js/HotAlarm.js' type='text/javascript'></script>
+    <script src='/js/ColdAlarm.js' type='text/javascript'></script>
+    <script src='/js/GetWeatherInfo.js' type='text/javascript'></script>
     <script src="RainAlarm.js"></script>
     
     
