--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,8 +39,8 @@
     <fieldset>
       <!-- This form shall be used to fetch your city name -->
       <form action="/" method="post">
-        <input name="city" type="text" class="ghost-input" placeholder="Enter a City" required>
-        <input type="submit" class="ghost-button" value="Get Weather">
+        <!-- <input name="city" type="text" class="ghost-input" placeholder="Enter a City" required>
+         <input type="submit" class="ghost-button" value="Change location"> -->
       </form>
   
       <!-- Upon fetching of data you will display it -->
@@ -105,6 +105,23 @@
                   <%= pressure %> N·m−2
                 </p>
               </div>
+            </div>
+          </div>
+
+          <div class="card card-accent-dark mb-3" style="max-width: 18rem;">
+            <div class="card-header">Summary</div>
+            <div class="card-body text-dark">Bootstrap CSS
+              <img src="<%= icon %>" alt="Weather-Icon">
+              <h5 class="card-title">Temperature</h5>
+              <p class="card-text">
+                In Degrees:
+                <%= temp %>°C/
+                <%= fahrenheit %>°F
+              </p>
+              <h5 class="card-title">Main</h5>
+              <p class="card-text">
+                <%= main %>
+              </p>
             </div>
           </div>
   
