--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Weather</title>
+    <title>WeatherSystem</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
@@ -32,16 +32,12 @@
   </head>
 
   <body>
+    <h3>To change the location <a href ="/login">login</a> as administrator </h3>
 <!-- Main container -->
 <div class="container">
 
     <!-- This shall hold the input fields and the output data -->
     <fieldset>
-      <!-- This form shall be used to fetch your city name -->
-      <form action="/" method="post">
-        <!-- <input name="city" type="text" class="ghost-input" placeholder="Enter a City" required>
-         <input type="submit" class="ghost-button" value="Change location"> -->
-      </form>
   
       <!-- Upon fetching of data you will display it -->
       <%if( weather !== null){ %>
@@ -134,23 +130,5 @@
           <% } %>
     </fieldset>
   </div>
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-      crossorigin="anonymous"
-    ></script>
   </body>
 </html>
