--- a/views/index.ejs
+++ b/views/index.ejs
@@ -105,14 +105,13 @@
           </div>
 
           <div class="card card-accent-dark mb-3" style="max-width: 18rem;">
-            <div class="card-header">Summary</div>
+            <div class="card-header">Alarms:</div>
             <div class="card-body text-dark">Bootstrap CSS
               <img src="<%= icon %>" alt="Weather-Icon">
               <h5 class="card-title">Temperature</h5>
               <p class="card-text">
                 In Degrees:
                 <%= temp %>°C/
-                <%= fahrenheit %>°F
               </p>
               <h5 class="card-title">Main</h5>
               <p class="card-text">
