--- a/views/index.ejs
+++ b/views/index.ejs
@@ -115,6 +115,9 @@
               </p>
             </div>
           </div>
+
+
+        
   
           <% } %>
   
@@ -124,6 +127,7 @@
           </p>
           <% } %>
     </fieldset>
+    <a href="/DisplayAlarm"><button>See Incomming Alarms</button></a>
   </div>
   </body>
 </html>
