--- a/views/index.ejs
+++ b/views/index.ejs
@@ -128,6 +128,7 @@
           <% } %>
     </fieldset>
     <a href="/DisplayAlarm"><button>See Incomming Alarms</button></a>
+    <a href="/WeatherForecast"><button>See Incomming Weather</button></a>
   </div>
   </body>
 </html>
