--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -45,5 +45,9 @@
          <input type="submit" class="ghost-button" value="Change location"> 
       </form>
   
+    <a href="/DisplayAlarm"><button>See Incomming Alarms</button></a>
+    <a href="/WeatherForecast"><button>See Incomming Weather</button></a>
+    <a href="/HistoricalData"><button>See Historical Data</button></a>
+    
   </body>
 </html>
