--- a/views/index.ejs
+++ b/views/index.ejs
@@ -129,6 +129,7 @@
     </fieldset>
     <a href="/DisplayAlarm"><button>See Incomming Alarms</button></a>
     <a href="/WeatherForecast"><button>See Incomming Weather</button></a>
+    <a href="/HistoricalData"><button>See Historical Data</button></a>
   </div>
   </body>
 </html>
