--- a/views/DisplayAlert.ejs
+++ b/views/DisplayAlert.ejs
@@ -70,6 +70,7 @@
      </fieldset>
     <a href="/"><button>Home</button></a>
     <a href="/WeatherForecast"><button>See Incomming Weather</button></a>
+    <a href="/HistoricalData"><button>See Historical Data</button></a>
      </div>
 
   </body>
