--- a/views/WeatherForecast.ejs
+++ b/views/WeatherForecast.ejs
@@ -96,6 +96,7 @@
      </fieldset>
     <a href="/"><button>Home</button></a>
     <a href="/DisplayAlarm"><button>See Incomming Alarms</button></a>
+    <a href="/HistoricalData"><button>See Historical Data</button></a>
     
      </div>
 
