--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,22 +13,27 @@
       href="https://img.icons8.com/office/16/000000/sunset--v2.png"
       type="image/x-icon"
     />
+
     <link rel="stylesheet" type="text/css" href="/css/style.css" />
+
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans:300"
       rel="stylesheet"
       type="text/css"
     />
+
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
+
   </head>
 
   <body>
-    <h3>To change the location <a href ="/login">login</a> as administrator </h3>
+
+    <h3 class = "indexH">To change the location <a href ="/login">login</a> as administrator </h3>
     <!-- Main container -->
    <div class="container">
 
@@ -44,25 +49,24 @@
           <%= timezone %>
         </p>
       </div>
-  
+     
+      <div style="margin: 0 auto;">
       <!-- You can find other data fetched by the app on the console in JSON form and display it as you please -->
       <div class="card-deck">
         <div class="card card-accent-dark mb-3" style="max-width: 18rem;">
           <div class="card-header">Summary</div>
-          <div class="card-body text-dark">Bootstrap CSS
+          <div class="card-title">The Sky:
             <img src="<%= icon %>" alt="Weather-Icon">
-            <h5 class="card-title">Temperature</h5>
-            <p class="card-text">
-              In Degrees:
-              <%= temp %>°C/
-              <%= fahrenheit %>°F
-            </p>
+            <h5 class="card-title">Temperature in degrees:</h5>
+            <p class="card-text"><%= temp %>°C</p> 
+            <p class ="card-text"> <%= fahrenheit %>°F </p>
             <h5 class="card-title">Main</h5>
             <p class="card-text">
               <%= main %>
             </p>
           </div>
         </div>
+
         <div class="card-deck">
           <div class="card card-acTomorrowcent-dark mb-3" style="max-width: 18rem;">
             <div class="card-header">Description</div>
@@ -81,6 +85,7 @@
               </p>
             </div>
           </div>
+
           <div class="card-deck">
             <div class="card card-accent-dark mb-3" style="max-width: 18rem;">
               <div class="card-header">Other info</div>
@@ -99,7 +104,9 @@
             </div>
           </div>
 
-          <div class="card card-accent-dark mb-3" style="max-width: 18rem;">
+        </div>
+
+       <!--   <div class="card card-accent-dark mb-3" style="max-width: 18rem;">
             <div class="card-header">Alarms Display:</div>
             <div class="card-body text-dark">
               <img src="<%= icon %>" alt="Weather-Icon">
@@ -114,6 +121,7 @@
               </p>
             </div>
           </div>
+          -->
 
 
         
@@ -126,9 +134,11 @@
           </p>
           <% } %>
     </fieldset>
-    <a href="/DisplayAlarm"><button>See Incomming Alarms</button></a>
-    <a href="/WeatherForecast"><button>See Incomming Weather</button></a>
-    <a href="/HistoricalData"><button>See Historical Data</button></a>
+    <div class="buttons">
+    <a href="/DisplayAlarm"><button class="niceButton">See Incomming Alarms</button></a>
+    <a href="/WeatherForecast"><button class="niceButton">See Incomming Weather</button></a>
+    <a href="/HistoricalData"><button class="niceButton">See Historical Data</button></a>
+   </div>
   </div>
   </body>
 </html>
