--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,46 +3,23 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Login</title>
-		<style>
-		.login-form {
-			width: 300px;
-			margin: 0 auto;
-			font-family: Tahoma, Geneva, sans-serif;
-		}
-		.login-form h1 {
-			text-align: center;
-			color: #4d4d4d;
-			font-size: 24px;
-			padding: 20px 0 20px 0;
-		}
-		.login-form input[type="password"],
-		.login-form input[type="text"] {
-			width: 100%;
-			padding: 15px;
-			border: 1px solid #dddddd;
-			margin-bottom: 15px;
-			box-sizing:border-box;
-		}
-		.login-form input[type="submit"] {
-			width: 100%;
-			padding: 15px;
-			background-color: #535b63;
-			border: 0;
-			box-sizing: border-box;
-			cursor: pointer;
-			font-weight: bold;
-			color: #ffffff;
-		}
-		</style>
+		<link rel="stylesheet" type="text/css" href="/css/style.css" />
 	</head>
 	<body>
-		<div class="login-form">
-			<h1>Login Form</h1>
-			<form action="/auth" method="POST">
-				<input type="text" name="username" placeholder="Username" required>
-				<input type="password" name="password" placeholder="Password" required>
-				<input type="submit">
-			</form>
+		<div class=".loginElement">
+			<div class="login-form">
+				<h2 class="logInH">Please sign in to change the location</h2>
+				<form action="/auth" method="POST">
+					<input type="text" class="loginInput"name="username" placeholder="Username" required>
+					<input type="password" class="loginInput" name="password" placeholder="Password" required>
+					<input  type="submit" class="send">
+				</form>
+				
+
+				<a href="/"><button class="niceButton">Go Back</button></a>
+				<br><br>
+			</div>
+			
 		</div>
 	</body>
 </html>
